# 8-Queens-Solver

./: .gitignore  Cargo.toml  README.md
src/: board.rs  board_builder.rs  hard2  init  init2  init_fen  main.rs  search.rs
src/states/: goal.2  init  init-16-queens.fen  init-blocked-easy  init-blocked-hard  init-donut  init-hard  init.fen
