[package]
name = "eight_queens"
version = "0.1.0"
authors = ["freshnewname"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="*"

[profile.dev]
opt-level=0
overflow-checks=false

[profile.release]
opt-level=3
panic="abort"
